<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".SymptomsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolBarTheme" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/admob_banner_ad">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:id="@+id/txtC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/symptoms_title_1"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:fontFamily="@font/nunito_sans_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/symptoms_desc_1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/nunito_sans_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/symptoms_title_2"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:fontFamily="@font/nunito_sans_bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="1dp"
                        android:background="@color/colorAccent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_fever" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:gravity="center"
                                android:text="@string/fever"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="1dp"
                        android:background="@color/colorAccent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_cough" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:gravity="center"
                                android:text="@string/cough"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="1dp"
                        android:background="@color/colorAccent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_ventilator" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:gravity="center"
                                android:text="@string/difficulty_breathing"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/colorAccent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_flu" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:gravity="center"
                                android:text="@string/runny_nose"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="140dp"
                        android:layout_height="160dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="1dp"
                        android:background="@color/colorAccent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_sore_throat" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:fontFamily="@font/nunito_sans_bold"
                                android:gravity="center"
                                android:text="@string/sore_throat"
                                android:textColor="@color/black"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/symptoms_desc_2"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/nunito_sans_bold" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/symptoms_title_3"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/nunito_sans_bold" />

            <Button
                android:id="@+id/knowMoreButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="Know More"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="6dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
